# GemmLowZ15

./: CMakeLists.txt  README.md  clock.cpp  dnnl_thread.hpp  gemmu16.cpp  gemmu8.cpp  gemmu8_low.cpp  kernel_s16s16s32.hpp  kernel_u8u8u32.hpp  kernel_x8x8s32.hpp  main.cpp  pack.hpp  pack_k4.hpp  pack_old.hpp  test_reference.h  utils.h  vec.h
